BARC UAT/src/objects/Sampling__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Code__c</fullName>
        <label>LCO Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Name__c</fullName>
        <label>LCO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <label>Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STB_Type__c</fullName>
        <label>STB Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Card__c</fullName>
        <label>Smart Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StbID__c</fullName>
        <label>STBID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_Village__c</fullName>
        <label>Town Village</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VC_No__c</fullName>
        <label>VC No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sampling</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Smart_Card__c</columns>
        <columns>StbID__c</columns>
        <columns>Status__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>LCO_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sampling No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samplings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>